# oh-my-claudeagent

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  LICENSE  OMCA.md  README.md  REPORT-upgrades-2.1.167.md  REPORT-upgrades.md  UPGRADE.md  justfile  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: state-schemas.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.omca/drafts/: README.md
.omca/notes/: force-for-plugin-opt-out.md
.omca/rules/: README.md  orchestration-workflow.md
agents/: atlas.md  executor.md  explore.md  hephaestus.md  librarian.md  metis.md  momus.md  multimodal-looker.md  oracle.md  prometheus.md  sisyphus-junior.md  sisyphus.md  socrates.md  triage.md
commands/: plan.md  ralph.md  start-work.md  ultrawork.md  ulw-loop.md
docs/: CONTRIBUTING.md
docs/design/: auto-deactivate.md  cold-start-ordering.md  stale-marker-gc.md
hooks/: hooks.json
output-styles/: omca-default.md
scripts/: agent-usage-reminder.sh  bash-error-recovery.sh  bench-omca-startup.sh  comment-checker.sh  config-change-audit.sh  context-injector.sh  delegate-retry.sh  drift-guard.sh  edit-error-recovery.sh  empty-task-response.sh  executor-grep-deny.sh  final-verification-evidence.sh  gc-in-use-markers.sh  git-destructive-deny.sh  instructions-loaded-audit.sh  json-error-recovery.sh  keyword-detector.sh  lifecycle-state.sh  notify.sh  package-plugin.sh  permission-denied-coach.sh  permission-filter.sh  plan-checkbox-verify.sh  plan-mode-handler.sh  post-compact-inject.sh  post-compact-log.sh  post-edit.sh  post-tool-batch.sh  postedit-format-and-lint.sh  pre-compact.sh  probe-userpromptsubmit-payload.sh  ralph-persistence.sh  read-error-recovery.sh  sed-grep-deny.sh  session-cleanup.sh  session-init.sh  slash-command-mode-detector.sh  start-ast-grep-server.sh  start-omca-state-server.sh  stop-failure-handler.sh  (+11 more)
scripts/lib/: common.sh
servers/: agent-metadata.json  ast-grep-server.py  categories.json  omca-mcp.py  omca-state-server.py  pyproject.toml
servers/tests/: conftest.py  test_ast.py  test_auto_deactivate.py  test_boulder.py  test_catalog.py  test_evidence.py  test_filesystem.py  test_legacy_path_fallback.py  test_notepad.py  test_output_style_body.py  test_placeholder.py  test_signal_shutdown.py  test_startup_latency.py  test_startup_time.py  test_validate_plan_write.py
servers/tools/: __init__.py  _boulder_core.py  _common.py  ast.py  boulder.py  boulder_resolve.py  catalog.py  evidence.py  filesystem.py  notepad.py  validate_plan_write.py
skills/atlas/: SKILL.md
skills/cancel-ralph/: SKILL.md
statusline/: README.md  client.py  config.py  core.py  daemon.py  direct.py  git.py  protocol.py  pyproject.toml  subagent.py  types.py  usage.py
statusline/tests/: conftest.py  test_client.py  test_core.py  test_daemon.py  test_git.py  test_repo_pr_segment.py  test_subagent.py  test_token_display.py
templates/: claudemd.md
tests/: README.md
(+259 files in other folders)
