[project]
name = "oh-my-claudeagent-server"
version = "2.2.0"
description = "MCP server for oh-my-claudeagent plugin"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "mcp[cli]>=1.6.0,<2.0",
  "pydantic>=2.11,<3.0",
  "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
  "ruff",
  "pre-commit",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "I",   # isort
  "UP",  # pyupgrade
  "PIE", # flake8-pie
  "PGH", # pygrep-hooks
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
# FastMCP requires Field() in function parameter defaults for tool descriptions
"*.py" = ["B008"]

[tool.ruff.lint.isort]
combine-as-imports = true
