[project]
name = "cc-statusline"
version = "1.0.0"
description = "Claude Code statusline with near-instant rendering"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cc-statusline = "statusline.client:main"
cc-statusline-daemon = "statusline.daemon:main"
cc-statusline-direct = "statusline.direct:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statusline"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "I",   # isort
  "UP",  # pyupgrade
  "PIE", # flake8-pie
  "PGH", # pygrep-hooks
  "RUF", # ruff-specific rules
]
ignore = [
  "E501", # line length handled by formatter
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.uv]
package = true
